--- a/src/assets/styles/tailwindcss/components/navigation-bar.css
+++ b/src/assets/styles/tailwindcss/components/navigation-bar.css
@@ -1,4 +1,4 @@
-.navigation-bar {
+.bot-navigation-bar {
   @apply fixed bottom-4 left-4 right-4 w-[calc(100%-32px)] h-[50px];
   @apply rounded-lg bg-gray-800 text-white p-1 border border-gray-900 overflow-hidden;
   @apply text-xs font-medium transition-all;
@@ -14,5 +14,16 @@
       #6a67e6 48.78%,
       #64548c 100%
     );
+  }
+}
+
+.top-navigation-bar {
+  @apply flex space-x-4 text-lg;
+  .nav-item {
+    @apply relative;
+    &.active::after {
+      content: "";
+      @apply absolute top-full -left-[5px] right-0 w-[calc(100%+10px)] h-[2px] bg-white;
+    }
   }
 }
